--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -44,6 +44,9 @@
   grid-template-columns: repeat(4, minmax(25%, auto));
   max-width: 100%;
   width: var(--max-width);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
